added FE support for prod api url. updated FE build command.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # Env and secrets
 .env
 .env.*
+!.env.example
 backend/.env
 backend/.env.*
+!backend/.env.example
 frontend/.env
 frontend/.env.*
+!frontend/.env.example
 
 # Node
 node_modules/
