--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:backend": "cd backend && npm start",
     "kill-port": "lsof -ti:3000 | xargs kill -9 2>/dev/null || echo 'Port 3000 is free'",
     "dev:clean": "npm run kill-port && npm run dev",
-    "heroku-postbuild": "npm install --prefix backend"
+    "build": "npm install --prefix backend"
   },
   "engines": {
     "node": "18.x",
