--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build:frontend": "cd frontend && npm install && npm run build",
     "start:backend": "cd backend && npm start",
     "kill-port": "lsof -ti:3000 | xargs kill -9 2>/dev/null || echo 'Port 3000 is free'",
-    "dev:clean": "npm run kill-port && npm run dev",
-    "heroku-prebuild": "npm --prefix backend install"
+    "dev:clean": "npm run kill-port && npm run dev"
   },
   "engines": {
     "node": "18.x",
