--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,10 @@
     "dev": "node --watch server.js",
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x",
+    "yarn": "1.x"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
