--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,10 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
   "dependencies": {
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
