--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": "20.x",
+    "node": ">=18.x",
     "yarn": "1.x"
   },
   "license": "ISC",
