--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "build:frontend": "cd frontend && npm install && npm run build",
     "start:backend": "cd backend && yarn start",
     "kill-port": "lsof -ti:3000 | xargs kill -9 2>/dev/null || echo 'Port 3000 is free'",
-    "dev:clean": "npm run kill-port && npm run dev"
+    "dev:clean": "npm run kill-port && npm run dev",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "format:backend": "prettier --write \"backend/**/*.{js,json,md}\"",
+    "format:frontend": "prettier --write \"frontend/**/*.{js,vue,json,css,md}\""
   },
   "keywords": ["lead-generation", "b2b", "scraping"],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "prettier": "^3.1.1"
   }
 }
 
